#55 - Added width declaration to resolve layout issue on innovator sidebar for mobile

--- a/src/_sass/elements/pageContent.scss
+++ b/src/_sass/elements/pageContent.scss
@@ -79,6 +79,9 @@ body.condensed-header {
       aside.mapSidebar, aside.tocSidebar, aside.stateSidebar {
         display: none;
       }
+      aside.innovatorSidebar {
+        width: 100%;
+      }
     }
   }
 }
